# ome_zarr_metadata

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: release_checklist.md
.github/workflows/: ci.yml  publish.yml  validate_release_version.yml
examples/: conformance_tester.rs
src/: any.rs  errors.rs  lib.rs  ndim.rs  next.rs  tests.rs  v0_4.rs  v0_5.rs  v0_5_dev.rs  v0_6.rs  validation.rs  version.rs
src/cli/: conformance.rs
src/next/: coordinate_systems.rs  coordinate_transformations.rs  multiscales.rs
src/next/coordinate_transformations/: affine.rs  bijection.rs  by_dimension.rs  coordinates.rs  displacements.rs  identity.rs  inverse_of.rs  map_axis.rs  rotation.rs  scale.rs  sequence.rs  translation.rs
src/v0_4/: axes.rs  bioformats2raw_layout.rs  coordinate_transformations.rs  labels.rs  multiscales.rs  omero.rs  plate.rs  well.rs
src/v0_5/: labels.rs  multiscales.rs  plate.rs  well.rs
src/v0_5_dev/: labels.rs  multiscales.rs  plate.rs  well.rs
src/v0_5_dev1/: labels.rs  multiscales.rs  plate.rs  well.rs
src/v0_5_rfc2/: labels.rs  multiscales.rs  plate.rs  well.rs
src/v0_6/: axes.rs  multiscale.rs  multiscales.rs
tests/: common.rs  v04.rs  v05.rs  v0_4.rs  v0_5.rs
